profile load dynamic anf fixes

--- a/community.html
+++ b/community.html
@@ -48,7 +48,7 @@
           </ul>
         </nav>
       </div>
-      <div class="c-header__nav">
+      <div class="c-header__nav js-profile">
         <div class="c-nav__profile c-nav__profile--meta">
           <a href="#notifications" class="c-nav__notification has-notification" tabindex="0">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
@@ -102,7 +102,7 @@
             </ul>
           </nav>
         </div>
-        <div class="c-mobile-nav__nav">
+        <div class="c-mobile-nav__nav js-profile">
           <div class="c-nav__profile c-nav__profile--meta">
             <a href="#notifications" class="c-nav__notification has-notification" tabindex="0">
               <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
