--- a/dashboard.html
+++ b/dashboard.html
@@ -46,7 +46,7 @@
       </div>
       <div class="c-dashboard__topbar">
         <h1 class="c-db__topbar--title u-mb-clear">MeeClimb Dashboard</h1>
-        <div class="c-db__topbar__profile">
+        <div class="c-db__topbar__profile js-profile">
           <div class="c-nav__profile">
             <a href="#notifications" class="c-nav__notification has-notification">
               <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
