--- a/routes.html
+++ b/routes.html
@@ -53,7 +53,7 @@
           </ul>
         </nav>
       </div>
-      <div class="c-header__nav">
+      <div class="c-header__nav js-profile">
         <nav class="c-nav c-nav--meta">
           <ul class="o-list c-nav__list u-mb-clear">
             <li class="c-nav__item">
@@ -117,7 +117,7 @@
             </ul>
           </nav>
         </div>
-        <div class="c-mobile-nav__nav">
+        <div class="c-mobile-nav__nav js-profile">
           <nav class="c-nav c-nav--meta">
             <ul class="o-list c-nav__list">
               <li class="c-nav__item">
