--- a/touwDetail.html
+++ b/touwDetail.html
@@ -46,7 +46,7 @@
           </ul>
         </nav>
       </div>
-      <div class="c-header__nav">
+      <div class="c-header__nav js-profile">
         <nav class="c-nav c-nav--meta">
           <ul class="o-list c-nav__list u-mb-clear">
             <li class="c-nav__item"><a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Route" class="c-nav__link">Login</a></li>
@@ -97,7 +97,7 @@
             </ul>
           </nav>
         </div>
-        <div class="c-mobile-nav__nav">
+        <div class="c-mobile-nav__nav js-profile">
           <nav class="c-nav c-nav--meta">
             <ul class="o-list c-nav__list">
               <li class="c-nav__item"><a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Route" class="c-nav__link">Login</a></li>
