--- a/account.html
+++ b/account.html
@@ -31,9 +31,8 @@
               </style>
               <clipPath id="b"><rect width="32" height="32" /></clipPath>
             </defs>
-            <g id="a" class="a"><path class="b" d="M-955.584,341.472l-2.942-1.7v-5.662l4.91,2.71,4.91-2.71v5.662l-2.942,1.7a3.932,3.932,0,0,1-1.968.528A3.932,3.932,0,0,1-955.584,341.472Zm12.565-20.839a.848.848,0,0,0-1.272-.734l-9.318,5.257-9.332-5.257a.848.848,0,0,0-1.272.734v15.857l-1.819-1.05A3.939,3.939,0,0,1-968,332.033V319.967a3.939,3.939,0,0,1,1.968-3.408l10.448-6.031a3.933,3.933,0,0,1,3.936,0l10.448,6.031a3.938,3.938,0,0,1,1.968,3.408v12.065a3.938,3.938,0,0,1-1.968,3.408l-1.819,1.05Z" transform="translate(970 -310)" /></g>
-          </svg>
-        </a>
+            <g id="a" class="a"><path class="b" d="M-955.584,341.472l-2.942-1.7v-5.662l4.91,2.71,4.91-2.71v5.662l-2.942,1.7a3.932,3.932,0,0,1-1.968.528A3.932,3.932,0,0,1-955.584,341.472Zm12.565-20.839a.848.848,0,0,0-1.272-.734l-9.318,5.257-9.332-5.257a.848.848,0,0,0-1.272.734v15.857l-1.819-1.05A3.939,3.939,0,0,1-968,332.033V319.967a3.939,3.939,0,0,1,1.968-3.408l10.448-6.031a3.933,3.933,0,0,1,3.936,0l10.448,6.031a3.938,3.938,0,0,1,1.968,3.408v12.065a3.938,3.938,0,0,1-1.968,3.408l-1.819,1.05Z" transform="translate(970 -310)" /></g></svg
+        ></a>
       </div>
       <div class="c-header__nav c-header__nav--main">
         <nav class="c-nav">
@@ -45,17 +44,13 @@
           </ul>
         </nav>
       </div>
-      <div class="c-header__nav">
-        <div class="c-nav__profile c-nav__profile--meta js-profile">
-          <a href="#notifications" class="c-nav__notification has-notification" tabindex="0">
-            <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+      <div class="c-header__nav js-profile">
+        <div class="c-nav__profile c-nav__profile--meta">
+          <a href="#notifications" class="c-nav__notification has-notification" tabindex="0"
+            ><svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
               <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
-              <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
-            </svg>
-          </a>
-          <a href="account.html" class="c-nav__profileimg--meta">
-            <img src="img/aman.jpg" alt="" class="c-nav__profileimg" />
-          </a>
+              <path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg></a
+          ><a href="account.html" class="c-nav__profileimg--meta"><img src="img/aman.jpg" alt="" class="c-nav__profileimg" /></a>
         </div>
       </div>
       <div class="c-header__mobile-nav-trigger">
@@ -101,17 +96,13 @@
             </ul>
           </nav>
         </div>
-        <div class="c-mobile-nav__nav">
+        <div class="c-mobile-nav__nav js-profile">
           <div class="c-nav__profile">
-            <a href="#notifications" class="c-nav__notification has-notification">
-              <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+            <a href="#notifications" class="c-nav__notification has-notification"
+              ><svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
                 <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
-                <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
-              </svg>
-            </a>
-            <a href="account.html" class="c-nav__profileimg c-nav__profileimg--account">
-              <img src="img/aman.jpg" alt="" />
-            </a>
+                <path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg></a
+            ><a href="account.html" class="c-nav__profileimg c-nav__profileimg--account"><img src="img/aman.jpg" alt="" /></a>
           </div>
         </div>
       </div>
@@ -122,7 +113,7 @@
           <div class="c-account__profile--background"></div>
           <div class="c-account__profile--meta">
             <img src="img/aman.jpg" alt="" class="c-account__profile--img js-profile-img" />
-            <a href="#logout" class="c-account__logout js-logout"></a>
+            <a href="#logout" class="c-account__logout js-logout"> </a>
           </div>
           <div class="c-account__content">
             <h2 class="c-account__profile--name u-mb-clear js-profile-name">Jhon Seed</h2>
@@ -142,20 +133,19 @@
               </div>
             </div>
             <div class="c-account__friends--buttons">
-              <button href="#search klimmer" class="c-account__friend--search" value="Zoek klimmer">Zoek een klimmer</button>
-              <button href="#invite klimmer" class="c-account__friend--search" value="Zoek klimmer">Klimmer Uitnodigen</button>
+              <button class="c-account__friend--search js-search-climber" value="Zoek klimmer">Zoek een klimmer</button>
+              <button class="c-account__friend--search js-invite-climber" value="Klimmer Uitnodigen">Klimmer Uitnodigen</button>
             </div>
             <h3 class="c-account__profile--biotitel u-mb-clear">Mijn bio:</h3>
             <p class="c-account__profile--bio js-profile-bio">
               Name: Jhon Seed Age: 27 Hometown: Denver, CO Jhon seed is a professional climber from Denver, Colorado. She has been climbing for 15 years and has climbed some of the most challenging routes in North America, Europe and Asia. Emma is known for her determination and grit.
-              <a href="#edit bio" class="c-account__profile--edit">
-                <svg xmlns="http://www.w3.org/2000/svg" class="c-account__profile--edit--symbol" width="22" height="22" viewBox="0 0 22 22">
+              <a href="#edit bio" class="c-account__profile--edit"
+                ><svg xmlns="http://www.w3.org/2000/svg" class="c-account__profile--edit--symbol" width="22" height="22" viewBox="0 0 22 22">
                   <g id="edit" transform="translate(-1 -0.879)">
                     <path id="Path_63" data-name="Path 63" d="M10.939,4H3.987A1.987,1.987,0,0,0,2,5.987V19.892a1.987,1.987,0,0,0,1.987,1.987H17.892a1.987,1.987,0,0,0,1.987-1.987V12.939" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
                     <path id="Path_64" data-name="Path 64" d="M18.5,2.5a2.121,2.121,0,0,1,3,3L12,15,8,16l1-4Z" transform="translate(-0.121)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
-                  </g>
-                </svg>
-              </a>
+                  </g></svg
+              ></a>
             </p>
           </div>
         </section>
@@ -172,11 +162,9 @@
                   <p class="u-mb-clear c-activity__top--date">12/02/2022</p>
                 </div>
               </div>
-              <input type="checkbox" name="heart" id="heart" class="o-hide-accessible c-heart-checkbox" />
-              <label for="heart" class="c-activity__heart">
-                <svg xmlns="http://www.w3.org/2000/svg" class="c-activity__heart--symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up"><path d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"></path></svg>
-                <span>12</span>
-              </label>
+              <input type="checkbox" name="heart" id="heart" class="o-hide-accessible c-heart-checkbox" /><label for="heart" class="c-activity__heart"
+                ><svg xmlns="http://www.w3.org/2000/svg" class="c-activity__heart--symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up"><path d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"></path></svg><span>12</span></label
+              >
             </div>
             <h5 class="u-mb-clear c-activity__intro">Heeft beklommen:</h5>
             <div class="c-activity__stats">
@@ -190,19 +178,35 @@
               </div>
             </div>
             <span class="c-activity__line"></span>
-            <p class="u-mb-clear c-activity__comment">Today I tackled a new climbing route and it was a blast! The holds were solid and the scenery was beautiful. I didn't pushed myself to the limit and it felt great to reach the summit. #climbing #adventure #outdoors</p>
+            <p class="u-mb-clear c-activity__comment">Today I tackled a new climbing route and it was a blast ! The holds were solid and the scenery was beautiful. I didn't pushed myself to the limit and it felt great to reach the summit. #climbing #adventure #outdoors</p>
             <div class="c-activity__comment--add">
-              <textarea name="comment" id="comment" class="c-comment__area" rows="1" placeholder="Voeg een reactie toe"></textarea>
-              <label for="send_comment" class="c-commen__button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send">
+              <textarea name="comment" id="comment" class="c-comment__area" rows="1" placeholder="Voeg een reactie toe"></textarea
+              ><label for="send_comment" class="c-commen__button"
+                ><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send">
                   <line x1="22" y1="2" x2="11" y2="13"></line>
-                  <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
-                </svg>
-              </label>
-              <input type="submit" name="send_comment" id="send_comment" class="o-hide-accessible" />
-              <div></div>
+                  <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg></label
+              ><input type="submit" name="send_comment" id="send_comment" class="o-hide-accessible" />
+            </div>
+            <div class="c-activity-user__comnments">
+              <div class="c-activity-user__comnment">
+                <div class="c-activity-user__comnment--top">
+                  <p class="c-activity-user__comnment--user u-mb-clear">By jhon seed</p>
+                  <p class="c-activity-user__comnment--date u-mb-clear">10/20/2022</p>
+                </div>
+                <p class="c-activity-user__comnment--text u-mb-clear">Great job on the climb! The route was challenging but you seemed to handle it with ease. Your technique was impressive and it was clear that you put in a lot of effort and preparation. The view from the top was breathtaking and you made it look effortless. Keep up the great work!</p>
+              </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="c-overlay js-overlay--addfriend">
+      <div class="c-form__inputs c-overlay--rope">
+        <label for="name" class="c-form__input--label">Zoek een vrieden</label>
+        <input placeholder="Naam van de klimmer" type="input" id="name" class="c-form__input js-add-friend-name" />
+        <div class="js-friend-sug"></div>
+        <div class="c-form__input--buttons">
+          <input type="button" value="Annuleren" class="c-form__input--button js-cancel-friend" />
         </div>
       </div>
     </div>
