--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </ul>
         </nav>
       </div>
-      <div class="c-header__nav">
+      <div class="c-header__nav js-profile">
         <nav class="c-nav c-nav--meta">
           <ul class="o-list c-nav__list u-mb-clear">
             <li class="c-nav__item">
@@ -107,7 +107,7 @@
             </svg>
           </button>
         </div>
-        <div class="c-mobile-nav__nav c-mobile-nav__nav--main">
+        <div class="c-mobile-nav__nav c-mobile-nav__nav--main js-profile">
           <nav class="c-nav">
             <ul class="o-list c-nav__list">
               <li class="c-nav__item"><a href="index.html" class="c-nav__link is-selected">Home</a></li>
