--- a/dashboard.html
+++ b/dashboard.html
@@ -470,6 +470,18 @@
       </div>
     </div>
 
+    <div class="c-notifivation">
+      <div>
+        <p class="c-notifivation--title"></p>
+        <div class="c-notifivation--close"></div>
+      </div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, consequuntur ullam mollitia assumenda saepe veniam facilis aliquid sunt,</p>
+      <div>
+        <input type="button" value="accept" />
+        <input type="button" value="ignore" />
+      </div>
+    </div>
+
     <aside class="c-db-mobile-nav">
       <div class="c-db-mobile-nav__bg"></div>
       <div class="c-db-mobile-nav__body">
@@ -499,7 +511,7 @@
                 <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
               </svg>
             </label>
-            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption3" name="navoption" />
+            <!-- <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption3" name="navoption" />
             <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption3">
               <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square">
                 <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
@@ -519,7 +531,7 @@
                 <circle cx="12" cy="12" r="3"></circle>
                 <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
               </svg>
-            </label>
+            </label> -->
           </div>
           <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" value="logout" />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4">
