--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </svg>
           </button>
         </div>
-        <div class="c-mobile-nav__nav c-mobile-nav__nav--main js-profile">
+        <div class="c-mobile-nav__nav c-mobile-nav__nav--main">
           <nav class="c-nav">
             <ul class="o-list c-nav__list">
               <li class="c-nav__item"><a href="index.html" class="c-nav__link is-selected">Home</a></li>
@@ -117,7 +117,7 @@
             </ul>
           </nav>
         </div>
-        <div class="c-mobile-nav__nav">
+        <div class="c-mobile-nav__nav js-profile">
           <nav class="c-nav c-nav--meta">
             <ul class="o-list c-nav__list">
               <li class="c-nav__item">
