--- a/ranking.html
+++ b/ranking.html
@@ -115,6 +115,8 @@
         </div>
       </div>
     </aside>
+    <div class="c-home__background"></div>
+    <div class="c-home__background-gradiant"></div>
     <div class="c-ranking">
       <div class="c-ranking__podium">
         <div class="c-ranking__second c-ranking__podium--place u-pr">
@@ -158,9 +160,9 @@
           <label class="c-label__select" for="select1"> Selecteer het touw </label>
           <span class="c-custom-select">
             <select class="c-input c-custom-select__input js-select-rope" class="" name="select1" id="select1">
-              <option value="route 1">Route 1</option>
-              <option value="route 2">Route 2</option>
-              <option value="route 3">Route 3</option>
+              <option value="route 1">Touw 1</option>
+              <option value="route 2">Touw 2</option>
+              <option value="route 3">Touw 3</option>
             </select>
             <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path d="M7,10l5,5,5-5Z" />
