addad comments loading to route detail

--- a/routes.html
+++ b/routes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Routes - KlimApp</title>
+    <title>Routes - MeeClimb</title>
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -132,7 +132,7 @@
       </div>
     </aside>
 
-    <section class="c-Routes__touw">
+    <section class="c-Routes__touw js-route-touw">
       <div class="c-touw">
         <img src="/img/aman.jpg" class="c-touw__backgouround" alt="rope achtergrond" />
         <div class="c-touw__backgouround c-touw__backgouround-1"></div>
