--- a/touwDetail.html
+++ b/touwDetail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MeeClimb - TouwDetail</title>
+    <title>TouwDetail - MeeClimb</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="favicon.svg" />
@@ -113,81 +113,10 @@
         <div class="c-wall__routes">
           <h3 class="c-wall__routes--title">Touw 1</h3>
           <h6 class="c-wall__routes--subtitle">selecteer de route die u wilt zien</h6>
-          <div class="c-wall__routes--options js-wall_route--options">
-            <input class="o-hide-accessible c-options c-option--hidden js-path-select" type="radio" id="route1" name="routes" data-id="1" checked />
-            <label class="c-label c-label--options c-custom-options" for="route1">
-              <span class="u-mb-clear c-wall__rating--title">Route 1</span><span class="u-mb-clear c-wall__rating--subtitle">Niveu: <span>5B</span></span>
-              <span class="u-mb-s c-wall__rating--subtitle">Builder: <span>Some name :)</span></span>
-              <span class="u-mb-clear c-wall__rating--subtitle">Rating:</span>
-              <span>
-                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
-              </span>
-            </label>
-            <input class="o-hide-accessible c-options c-option--hidden js-path-select" type="radio" id="route2" name="routes" data-id="2" /><label class="c-label c-label--options c-custom-options" for="route2">
-              <span class="u-mb-clear c-wall__rating--title">Route 2</span><span class="u-mb-clear c-wall__rating--subtitle">Niveu: <span>2A</span></span>
-              <span class="u-mb-s c-wall__rating--subtitle">Builder: <span>Some other name</span></span>
-              <span class="u-mb-clear c-wall__rating--subtitle">Rating:</span>
-              <span>
-                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
-              </span>
-            </label>
-            <input class="o-hide-accessible c-options c-option--hidden js-path-select" type="radio" id="route3" name="routes" data-id="3" /><label class="c-label c-label--options c-custom-options" for="route3">
-              <span class="u-mb-clear c-wall__rating--title">Route 3</span><span class="u-mb-clear c-wall__rating--subtitle">Niveu: <span>5C</span></span>
-              <span class="u-mb-s c-wall__rating--subtitle">Builder: <span>And an other name</span></span>
-              <span class="u-mb-clear c-wall__rating--subtitle">Rating:</span>
-              <span>
-                <svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star c-wall__star--fill" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-wall__star" width="40" height="38" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
-              </span>
-            </label>
-          </div>
+          <div class="c-wall__routes--options js-wall_route--options"></div>
           <a href="routes.html" class="c-wall__routes--goback">Ga terug</a>
         </div>
-        <!-- only show this when logged in -->
-        <div class="c-wall__from">
-          <div class="c-commend__add" title="je moet ingelogd zijn om comments achter te laten" aria-disabled="TFrue">
-            <label for="cocmment">Voeg een comment toe:</label><textarea name="comment" id="comment" class="c-comment__area" rows="4" placeholder="Wat vind u van deze route?"></textarea>
-            <div class="stars" data-stars="1">
-              <svg xmlns="http://www.w3.org/2000/svg" class="star rating" data-rating="1" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="star rating" data-rating="2" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="star rating" data-rating="3" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="star rating" data-rating="4" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="star rating" data-rating="5" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
-            </div>
-            <label for="send_comment" class="c-commen__button">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send">
-                <line x1="22" y1="2" x2="11" y2="13"></line>
-                <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
-              </svg>
-              Verstuur
-            </label>
-            <input type="button" name="send_comment" id="send_comment" class="o-hide-accessible" />
-          </div>
-          <h3 class="c-comment__header u-mb-clear">Recente reacties:</h3>
-          <div class="c-comments">
-            <div class="c-comment">
-              <div class="c-comment-top">
-                <img src="img/aman.jpg" alt="" class="c-comment__img" />
-                <div>
-                  <p class="c-comment__name u-mb-xs">Elien Beirlaen</p>
-                  <p class="c-comment__date u-mb-clear">10/01/2023</p>
-                </div>
-              </div>
-              <div class="c-comment__stars">
-                <svg xmlns="http://www.w3.org/2000/svg" class="c-comment__star c-comment__star--fill" data-rating="1" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-comment__star c-comment__star--fill" data-rating="2" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-comment__star" data-rating="3" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-comment__star" data-rating="4" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-comment__star" data-rating="5" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
-              </div>
-              <div class="c-comment__text">This route was a disappointment. The holds were loose and the rock quality was poor. I also found the routing to be confusing and not well-marked. I would not recommend it to others.</div>
-            </div>
-            <div class="c-comment">
-              <div class="c-comment-top">
-                <span class="c-comment__img"></span>
-                <div>
-                  <p class="c-comment__name u-mb-xs">Jhon Seed</p>
-                  <p class="c-comment__date u-mb-clear">03/01/2023</p>
-                </div>
-              </div>
-              <div class="c-comment__stars">
-                <svg xmlns="http://www.w3.org/2000/svg" class="c-comment__star c-comment__star--fill" data-rating="1" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-comment__star c-comment__star--fill" data-rating="2" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-comment__star c-comment__star--fill" data-rating="3" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-comment__star c-comment__star--fill" data-rating="4" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg><svg xmlns="http://www.w3.org/2000/svg" class="c-comment__star" data-rating="5" width="24" height="24" viewBox="0 0 40 38"><path d="M11.65,44,14.9,29.95,4,20.5l14.4-1.25L24,6l5.6,13.25L44,20.5,33.1,29.95,36.35,44,24,36.55Z" transform="translate(-4 -6)" /></svg>
-              </div>
-              <div class="c-comment__text">Great route! Challenging yet manageable for a beginner climber like myself. The holds were solid and the view from the top was breathtaking. Highly recommend giving it a try</div>
-            </div>
-          </div>
-        </div>
+        <div class="c-wall__from js-comments"></div>
       </div>
     </div>
   </body>
