--- a/account.html
+++ b/account.html
@@ -1,4 +1,4 @@
-< !DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -134,7 +134,7 @@
             </div>
             <div class="c-account__friends--buttons">
               <button class="c-account__friend--search js-search-climber" value="Zoek klimmer">Zoek een klimmer</button>
-              <button class="c-account__friend--search js-invite-climber" value="Klimmer Uitnodigen">Klimmer Uitnodigen</button>
+              <!-- <button class="c-account__friend--search js-invite-climber" value="Klimmer Uitnodigen">Klimmer Uitnodigen</button> -->
             </div>
             <h3 class="c-account__profile--biotitel u-mb-clear">Mijn bio:</h3>
             <p class="c-account__profile--bio js-profile-bio">
@@ -207,6 +207,20 @@
         <div class="js-friend-sug"></div>
         <div class="c-form__input--buttons">
           <input type="button" value="Annuleren" class="c-form__input--button js-cancel-friend" />
+        </div>
+      </div>
+    </div>
+    <div class="c-notification js-notification-item">
+      <div class="c-notification--topbar"></div>
+      <div class="c-notification--content">
+        <div class="c-notification--top">
+          <p class="c-notification--title u-mb-clear">Info</p>
+          <a class="c-notification--close u-mb-clear js-close-notification" href="#close">X</a>
+        </div>
+        <p class="c-notification--text u-mb-clear js-notification-text">Er zijn geen medlingen</p>
+        <div class="c-notification--buttons">
+          <input type="button" value="accept" class="c-notification--button js-notification-accept" />
+          <input type="button" value="ignore" class="c-notification--button js-notification-ignore" />
         </div>
       </div>
     </div>
