--- a/index.html
+++ b/index.html
@@ -143,5 +143,19 @@
         <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Home" class="c-home__button">Bekijk Meer</a>
       </div>
     </div>
+    <div class="c-notification js-notification-item u-display--none">
+      <div class="c-notification--topbar"></div>
+      <div class="c-notification--content">
+        <div class="c-notification--top">
+          <p class="c-notification--title u-mb-clear">Info</p>
+          <a class="c-notification--close u-mb-clear js-close-notification" href="#close">X</a>
+        </div>
+        <p class="c-notification--text u-mb-clear js-notification-text">Er zijn geen medlingen</p>
+        <div class="c-notification--buttons">
+          <input type="button" value="accept" class="c-notification--button js-notification-accept" />
+          <input type="button" value="ignore" class="c-notification--button js-notification-ignore" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
