--- a/touwDetail.html
+++ b/touwDetail.html
@@ -119,5 +119,19 @@
         <div class="c-wall__from js-comments"></div>
       </div>
     </div>
+    <div class="c-notification js-notification-item u-display--none">
+      <div class="c-notification--topbar"></div>
+      <div class="c-notification--content">
+        <div class="c-notification--top">
+          <p class="c-notification--title u-mb-clear">Info</p>
+          <a class="c-notification--close u-mb-clear js-close-notification" href="#close">X</a>
+        </div>
+        <p class="c-notification--text u-mb-clear js-notification-text">Er zijn geen medlingen</p>
+        <div class="c-notification--buttons">
+          <input type="button" value="accept" class="c-notification--button js-notification-accept" />
+          <input type="button" value="ignore" class="c-notification--button js-notification-ignore" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
