added community page dynamic loading

--- a/account.html
+++ b/account.html
@@ -134,7 +134,7 @@
             </div>
             <div class="c-account__friends--buttons">
               <button class="c-account__friend--search js-search-climber" value="Zoek klimmer">Zoek een klimmer</button>
-              <!-- <button class="c-account__friend--search js-invite-climber" value="Klimmer Uitnodigen">Klimmer Uitnodigen</button> -->
+              <button class="c-account__friend--search js-link-rfid" value="Rfid koppelen">Rfid koppelen</button>
             </div>
             <h3 class="c-account__profile--biotitel u-mb-clear">Mijn bio:</h3>
             <p class="c-account__profile--bio js-profile-bio">
