--- a/community.html
+++ b/community.html
@@ -15,7 +15,7 @@
 
     <script src="js/app.js"></script>
   </head>
-  <body>
+  <body id="community">
     <header class="c-header">
       <div class="c-header__logo">
         <a href="index.html" class="c-logo u-mb-clear"
@@ -159,7 +159,7 @@
         </div>
       </div>
     </div>
-    <div class="c-notification js-notification-item u-display--none">
+    <div class="c-notification js-notification-item">
       <div class="c-notification--topbar"></div>
       <div class="c-notification--content">
         <div class="c-notification--top">
