--- a/ranking.html
+++ b/ranking.html
@@ -242,7 +242,7 @@
         </li>
       </ul>
     </div>
-    <div class="c-notification js-notification-item u-display--none">
+    <div class="c-notification js-notification-item">
       <div class="c-notification--topbar"></div>
       <div class="c-notification--content">
         <div class="c-notification--top">
