--- a/routes.html
+++ b/routes.html
@@ -149,7 +149,7 @@
         </div>
       </div>
     </section>
-    <div class="c-notification js-notification-item u-display--none">
+    <div class="c-notification js-notification-item">
       <div class="c-notification--topbar"></div>
       <div class="c-notification--content">
         <div class="c-notification--top">
