--- a/dashboard.html
+++ b/dashboard.html
@@ -60,27 +60,27 @@
       </div>
       <div class="c-dashboard__sidebar">
         <div class="c-dasboard__sidebar--top">
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption1" name="navoption" />
+          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption1" name="navoption" />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption1" title="Ga terug naar de ander pagina's">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
               <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
               <polyline points="9 22 9 12 15 12 15 22"></polyline>
             </svg>
           </label>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption2" name="navoption" checked />
+          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption2" name="navoption" checked />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption2" title="bewerk en toevoegen van touwen en/of routes">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit">
               <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
               <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
             </svg>
           </label>
-          <!-- <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption3" name="navoption" disabled />
+          <!-- <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption3" name="navoption" disabled />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption3" title="moderatie van social media berichten">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square">
               <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
             </svg>
           </label>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption4" name="navoption" disabled />
+          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" name="navoption" disabled />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4" title="Statistieken van de muren">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2">
               <line x1="18" y1="20" x2="18" y2="10"></line>
@@ -88,7 +88,7 @@
               <line x1="6" y1="20" x2="6" y2="14"></line>
             </svg>
           </label>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption5" name="navoption" disabled />
+          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption5" name="navoption" disabled />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption5" title="Setting voor moderation">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings">
               <circle cx="12" cy="12" r="3"></circle>
@@ -470,7 +470,7 @@
       </div>
     </div>
 
-    <div class="c-notification js-notification-item u-display--none">
+    <div class="c-notification js-notification-item">
       <div class="c-notification--topbar"></div>
       <div class="c-notification--content">
         <div class="c-notification--top">
@@ -500,27 +500,27 @@
 
         <div class="c-db-mobile-nav__nav c-db-mobile-nav__nav--main">
           <div class="c-dasboard__sidebar--top u-mb-xs">
-            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption1" name="navoption" />
+            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption1" name="navoption" />
             <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption1">
               <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                 <polyline points="9 22 9 12 15 12 15 22"></polyline>
               </svg>
             </label>
-            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption2" name="navoption" />
+            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption2" name="navoption" />
             <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption2">
               <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit">
                 <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
                 <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
               </svg>
             </label>
-            <!-- <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption3" name="navoption" />
+            <!-- <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption3" name="navoption" />
             <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption3">
               <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square">
                 <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
               </svg>
             </label>
-            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption4" name="navoption" />
+            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" name="navoption" />
             <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4">
               <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2">
                 <line x1="18" y1="20" x2="18" y2="10"></line>
@@ -528,7 +528,7 @@
                 <line x1="6" y1="20" x2="6" y2="14"></line>
               </svg>
             </label>
-            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption5" name="navoption" />
+            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption5" name="navoption" />
             <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption5">
               <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings">
                 <circle cx="12" cy="12" r="3"></circle>
@@ -545,18 +545,6 @@
             </svg>
           </label>
         </div>
-      </div>
-      <div class="c-db-mobile-nav__nav">
-        <nav class="c-nav c-nav--meta">
-          <ul class="o-list c-nav__list">
-            <li class="c-nav__item">
-              <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Home" class="c-nav__link">Login</a>
-            </li>
-            <li class="c-nav__item">
-              <a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Home" class="c-nav__link">Registreer</a>
-            </li>
-          </ul>
-        </nav>
       </div>
     </aside>
   </body>
