--- a/touwDetail.html
+++ b/touwDetail.html
@@ -119,7 +119,7 @@
         <div class="c-wall__from js-comments"></div>
       </div>
     </div>
-    <div class="c-notification js-notification-item u-display--none">
+    <div class="c-notification js-notification-item">
       <div class="c-notification--topbar"></div>
       <div class="c-notification--content">
         <div class="c-notification--top">
