added like functionality

--- a/community.html
+++ b/community.html
@@ -117,7 +117,7 @@
     </aside>
     <div class="c-home__background"></div>
     <div class="c-home__background-gradiant"></div>
-    <div class="c-community">
+    <div class="c-community js-ommunity">
       <h1 class="c-community--title">Recente activiteiten</h1>
       <div class="c-community__item">
         <div class="c-community__item--topbar">
