fixed naming + dashboard draw path

--- a/community.html
+++ b/community.html
@@ -506,7 +506,7 @@
           <p class="c-notification--title u-mb-clear">Info</p>
           <a class="c-notification--close u-mb-clear js-close-notification" href="#close">X</a>
         </div>
-        <p class="c-notification--text u-mb-clear js-notification-text">Er zijn geen medlingen</p>
+        <p class="c-notification--text u-mb-clear js-notification-text">Je hebt geen notificaties</p>
         <div class="c-notification--buttons">
           <input type="button" value="accept" class="c-notification--button js-notification-accept" />
           <input type="button" value="ignore" class="c-notification--button js-notification-ignore" />
