--- a/dashboard.html
+++ b/dashboard.html
@@ -561,7 +561,6 @@
               <span class="c-custom-select">
                 <select class="c-input c-custom-select__input js-select-rope" class="" name="select1" id="select1">
                   <option value="touw 1">Touw 1</option>
-                  <option value="touw 2">Touw 2</option>
                 </select>
                 <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                   <path d="M7,10l5,5,5-5Z" />
@@ -573,8 +572,6 @@
               <span class="c-custom-select">
                 <select class="c-input c-custom-select__input js-select-route" class="" name="select1" id="select1">
                   <option value="route 1">Route 1</option>
-                  <option value="route 2">Route 2</option>
-                  <option value="route 3">Route 3</option>
                 </select>
                 <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                   <path d="M7,10l5,5,5-5Z" />
@@ -586,10 +583,10 @@
           <div class="c-form__setting">
             <h1 class="c-form__setting--title">Instelling</h1>
             <div class="c-form__inputs">
-              <label for="name" class="c-form__input--label">Name</label>
-              <input placeholder="naam van de route" type="input" id="name" class="c-form__input js-route-name" />
+              <label for="name" class="c-form__input--label">Naam</label>
+              <input placeholder="Naam van de route" type="input" id="name" class="c-form__input js-route-name" />
               <label for="niveau" class="c-form__input--label">Niveau</label>
-              <input placeholder="route niveau" type="input" id="niveau" class="c-form__input js-route-niveau" />
+              <input placeholder="Route niveau" type="input" id="niveau" class="c-form__input js-route-niveau" />
               <label for="color" class="c-form__input--label">Kleur</label>
               <input type="color" id="color" class="c-form__input c-form__input--color js-route-color" />
             </div>
@@ -606,7 +603,7 @@
             </div>
           </div>
           <div class="c-form__setting">
-            <h1 class="c-form__setting--title">Delete geselecteerde</h1>
+            <h1 class="c-form__setting--title">Verwijderen van geselecteerde</h1>
             <div class="c-form__input--buttons">
               <input type="button" value="Touw" class="c-form__input--button js-delete-rope" />
               <input type="button" value="Route" class="c-form__input--button js-delete-route" />
@@ -619,7 +616,7 @@
     <div class="c-overlay js-overlay--addrope">
       <div class="c-form__inputs c-overlay--rope">
         <label for="name" class="c-form__input--label">Image URL</label>
-        <input placeholder="geef een image url" type="input" id="name" class="c-form__input js-route-image" />
+        <input placeholder="Geef een image url" type="input" id="name" class="c-form__input js-route-image" />
         <div class="c-form__input--buttons">
           <input type="button" value="Toevoegen" class="c-form__input--button c-form__input--button--delete js-toevoegen-rope" />
           <input type="button" value="Annuleren" class="c-form__input--button c-form__input--button--delete js-annuleren-rope" />
@@ -629,9 +626,9 @@
     <div class="c-overlay js-overlay--addroute">
       <div class="c-form__inputs c-overlay--rope">
         <label for="name" class="c-form__input--label">Name</label>
-        <input placeholder="naam van de route" type="input" id="name" class="c-form__input js-add-route-name" />
+        <input placeholder="Naam van de route" type="input" id="name" class="c-form__input js-add-route-name" />
         <label for="niveau" class="c-form__input--label">Niveau</label>
-        <input placeholder="route niveau" type="input" id="niveau" class="c-form__input js-add-route-niveau" />
+        <input placeholder="Route niveau" type="input" id="niveau" class="c-form__input js-add-route-niveau" />
         <label for="color" class="c-form__input--label">Kleur</label>
         <input type="color" id="color" class="c-form__input c-form__input--color js-add-route-color" />
         <div class="c-form__input--buttons">
@@ -648,7 +645,7 @@
           <p class="c-notification--title u-mb-clear">Info</p>
           <a class="c-notification--close u-mb-clear js-close-notification" href="#close">X</a>
         </div>
-        <p class="c-notification--text u-mb-clear js-notification-text">Er zijn geen medlingen</p>
+        <p class="c-notification--text u-mb-clear js-notification-text">Je hebt geen notificaties</p>
         <div class="c-notification--buttons">
           <input type="button" value="accept" class="c-notification--button js-notification-accept" />
           <input type="button" value="ignore" class="c-notification--button js-notification-ignore" />
