--- a/ranking.html
+++ b/ranking.html
@@ -497,12 +497,10 @@
       </div>
       <div class="c-ranking__select">
         <div>
-          <label class="c-label__select" for="select1"> Selecteer het touw </label>
+          <label class="c-label__select" for="select1">Selecteer het touw</label>
           <span class="c-custom-select">
             <select class="c-input c-custom-select__input js-select-rope" class="" name="select1" id="select1">
               <option value="route 1">Touw 1</option>
-              <option value="route 2">Touw 2</option>
-              <option value="route 3">Touw 3</option>
             </select>
             <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path d="M7,10l5,5,5-5Z" />
@@ -510,12 +508,10 @@
           </span>
         </div>
         <div>
-          <label class="c-label__select" for="select1"> Selecteer het de route </label>
+          <label class="c-label__select" for="select1">Selecteer het de route</label>
           <span class="c-custom-select">
             <select class="c-input c-custom-select__input js-select-route" class="" name="select1" id="select1">
               <option value="route 1">Route 1</option>
-              <option value="route 2">Route 2</option>
-              <option value="route 3">Route 3</option>
             </select>
             <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path d="M7,10l5,5,5-5Z" />
@@ -523,56 +519,7 @@
           </span>
         </div>
       </div>
-      <ul class="o-list js-ranking-list">
-        <li class="c-ranking__item">
-          <div>
-            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
-            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
-          </div>
-          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
-        </li>
-        <li class="c-ranking__item">
-          <div>
-            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
-            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
-          </div>
-          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
-        </li>
-        <li class="c-ranking__item">
-          <div>
-            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
-            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
-          </div>
-          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
-        </li>
-        <li class="c-ranking__item">
-          <div>
-            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
-            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
-          </div>
-          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
-        </li>
-        <li class="c-ranking__item">
-          <div>
-            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
-            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
-          </div>
-          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
-        </li>
-        <li class="c-ranking__item">
-          <div>
-            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
-            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
-          </div>
-          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
-        </li>
-        <li class="c-ranking__item">
-          <div>
-            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
-            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
-          </div>
-          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
-        </li>
+      <ul class="o-list js-ranking">
         <li class="c-ranking__item">
           <div>
             <p class="u-mb-clear c-ranking__item--nummer">4.</p>
@@ -589,7 +536,7 @@
           <p class="c-notification--title u-mb-clear">Info</p>
           <a class="c-notification--close u-mb-clear js-close-notification" href="#close">X</a>
         </div>
-        <p class="c-notification--text u-mb-clear js-notification-text">Er zijn geen medlingen</p>
+        <p class="c-notification--text u-mb-clear js-notification-text">Je hebt geen notificaties</p>
         <div class="c-notification--buttons">
           <input type="button" value="accept" class="c-notification--button js-notification-accept" />
           <input type="button" value="ignore" class="c-notification--button js-notification-ignore" />
