--- a/account.html
+++ b/account.html
@@ -138,14 +138,14 @@
             </div>
             <h3 class="c-account__profile--biotitel u-mb-clear">Mijn bio:</h3>
             <p class="c-account__profile--bio js-profile-bio">
-              Name: Jhon Seed Age: 27 Hometown: Denver, CO Jhon seed is a professional climber from Denver, Colorado. She has been climbing for 15 years and has climbed some of the most challenging routes in North America, Europe and Asia. Emma is known for her determination and grit.
-              <a href="#edit bio" class="c-account__profile--edit"
+              Ik ben een klimmer
+              <!-- <a href="#edit bio" class="c-account__profile--edit"
                 ><svg xmlns="http://www.w3.org/2000/svg" class="c-account__profile--edit--symbol" width="22" height="22" viewBox="0 0 22 22">
                   <g id="edit" transform="translate(-1 -0.879)">
                     <path id="Path_63" data-name="Path 63" d="M10.939,4H3.987A1.987,1.987,0,0,0,2,5.987V19.892a1.987,1.987,0,0,0,1.987,1.987H17.892a1.987,1.987,0,0,0,1.987-1.987V12.939" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
                     <path id="Path_64" data-name="Path 64" d="M18.5,2.5a2.121,2.121,0,0,1,3,3L12,15,8,16l1-4Z" transform="translate(-0.121)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
                   </g></svg
-              ></a>
+              ></a> -->
             </p>
           </div>
         </section>
@@ -217,7 +217,7 @@
           <p class="c-notification--title u-mb-clear">Info</p>
           <a class="c-notification--close u-mb-clear js-close-notification" href="#close">X</a>
         </div>
-        <p class="c-notification--text u-mb-clear js-notification-text">Er zijn geen medlingen</p>
+        <p class="c-notification--text u-mb-clear js-notification-text">Je hebt geen notificaties</p>
         <div class="c-notification--buttons">
           <input type="button" value="accept" class="c-notification--button js-notification-accept" />
           <input type="button" value="ignore" class="c-notification--button js-notification-ignore" />
