--- a/routes.html
+++ b/routes.html
@@ -464,23 +464,7 @@
       </div>
     </aside>
 
-    <section class="c-Routes__touw js-route-touw">
-      <div class="c-touw">
-        <img src="/img/aman.jpg" class="c-touw__backgouround" alt="rope achtergrond" />
-        <div class="c-touw__backgouround c-touw__backgouround-1"></div>
-        <div class="c-touw__content">
-          <h1 class="c-touw__content--title">Touw 1</h1>
-          <a href="touwDetail.html?touw=1" class="c-touw__content--button">Bekijk routes</a>
-        </div>
-      </div>
-      <div class="c-touw">
-        <div class="c-touw__backgouround" style="position: absolute; top: 0; width: 100%; height: 100%; background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/sander.jpg) no-repeat center center / cover; filter: sepia(50%) saturate(350%) hue-rotate(210deg) brightness(50%) blur(1px); transform: scale(1.05); z-index: -1"></div>
-        <div class="c-touw__content">
-          <h1 class="c-touw__content--title">Touw 2</h1>
-          <a href="touwDetail.html?touw=2" class="c-touw__content--button">Bekijk routes</a>
-        </div>
-      </div>
-    </section>
+    <section class="c-Routes__touw js-route-touw"></section>
     <div class="c-notification js-notification-item">
       <div class="c-notification--topbar"></div>
       <div class="c-notification--content">
@@ -488,7 +472,7 @@
           <p class="c-notification--title u-mb-clear">Info</p>
           <a class="c-notification--close u-mb-clear js-close-notification" href="#close">X</a>
         </div>
-        <p class="c-notification--text u-mb-clear js-notification-text">Er zijn geen medlingen</p>
+        <p class="c-notification--text u-mb-clear js-notification-text">Je hebt geen notificaties</p>
         <div class="c-notification--buttons">
           <input type="button" value="accept" class="c-notification--button js-notification-accept" />
           <input type="button" value="ignore" class="c-notification--button js-notification-ignore" />
