--- a/touwDetail.html
+++ b/touwDetail.html
@@ -452,7 +452,7 @@
       <div class="c-wall__options">
         <div class="c-wall__routes">
           <h3 class="c-wall__routes--title">Touw 1</h3>
-          <h6 class="c-wall__routes--subtitle">selecteer de route die u wilt zien</h6>
+          <h6 class="c-wall__routes--subtitle">Selecteer de route die u wilt zien</h6>
           <div class="c-wall__routes--options js-wall_route--options"></div>
           <a href="routes.html" class="c-wall__routes--goback">Ga terug</a>
         </div>
@@ -466,7 +466,7 @@
           <p class="c-notification--title u-mb-clear">Info</p>
           <a class="c-notification--close u-mb-clear js-close-notification" href="#close">X</a>
         </div>
-        <p class="c-notification--text u-mb-clear js-notification-text">Er zijn geen medlingen</p>
+        <p class="c-notification--text u-mb-clear js-notification-text">Je hebt geen notificaties</p>
         <div class="c-notification--buttons">
           <input type="button" value="accept" class="c-notification--button js-notification-accept" />
           <input type="button" value="ignore" class="c-notification--button js-notification-ignore" />
